--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@babel/core": "7.7.4",
+    "@reach/router": "^1.2.1",
     "@svgr/webpack": "4.3.3",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
@@ -61,12 +62,13 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "devDependencies": {
+    "@types/reach__router": "^1.2.6",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
     "typescript": "3.7.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start" :"node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
