added idb & added stores DB

--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.5",
+    "idb": "^4.0.5",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
@@ -68,7 +69,7 @@
     "typescript": "3.7.3"
   },
   "scripts": {
-    "start" :"node scripts/start.js",
+    "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
