--- a/web/.env.local
+++ b/web/.env.local
@@ -1,1 +1,2 @@
+PORT=3001
 REACT_APP_APIS={"rickandmortyapi":"https://rickandmortyapi.com/api/character/2", "posts":"https://pwa-gram-7c869.firebaseio.com/posts.json" }
