--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "idb": "^4.0.5",
+    "idborm": "^1.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
