--- a/web/.env.local
+++ b/web/.env.local
@@ -1,2 +1,6 @@
 PORT=3001
-REACT_APP_APIS={"rickandmortyapi":"https://rickandmortyapi.com/api/character/2", "posts":"https://pwa-gram-7c869.firebaseio.com/posts.json" }
+REACT_APP_APIS={
+  "rickandmortyapi": "https://rickandmortyapi.com/api/character/2",
+  "posts": "https://pwa-gram-7c869.firebaseio.com/posts.json",
+  "newPost": "https://us-central1-pwa-gram-7c869.cloudfunctions.net/newPost"
+}
