--- a/web/package.json
+++ b/web/package.json
@@ -55,6 +55,7 @@
     "sass-loader": "8.0.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "styled-components": "^5.0.0",
     "terser-webpack-plugin": "2.2.1",
     "ts-pnp": "1.1.5",
     "url-loader": "2.3.0",
@@ -67,6 +68,8 @@
     "@types/reach__router": "^1.2.6",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
+    "@types/styled-components": "^4.4.2",
+    "firebase-tools": "^7.12.1",
     "typescript": "3.7.3"
   },
   "scripts": {
