--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "web-push": "^3.4.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
