--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "web-push": "^3.4.3"
