--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -12,10 +12,12 @@
     "node": "8"
   },
   "dependencies": {
+    "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
+    "uuid-v4": "^0.1.0",
     "web-push": "^3.4.3"
   },
   "devDependencies": {
