--- a/web/package.json
+++ b/web/package.json
@@ -75,7 +75,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "deploy": "firebase deploy --only functions"
   },
   "browserslist": [
     ">0.2%",
