--- a/web/package.json
+++ b/web/package.json
@@ -76,7 +76,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "deploy": "firebase deploy --only functions"
+    "deploy": "firebase deploy --only functions",
+    "serve": "firebase serve --only functions"
   },
   "browserslist": [
     ">0.2%",
